Update home link

--- a/about me.html
+++ b/about me.html
@@ -99,7 +99,7 @@
                 <b>About Me</b>
             </div>
             <div class="rightcolumn">
-                <a href="file:///D:/Documents/USM/HTML/Trial.html">Home</a>
+                <a href="https://diminecjean.github.io/home">Home</a>
                 <a href="file:///D:/Documents/USM/HTML/Trial_Dashboard.html">My Dashboard</a>
                 <a href="#">HTML</a>
                 <a href="#">CSS</a>
