Update about me link

--- a/home.html
+++ b/home.html
@@ -112,7 +112,7 @@
     </div>
 
     <div class="topnav">
-            <a href="file:///D:/Documents/USM/HTML/Trial_AboutMe.html">About Me</a>
+            <a href="https://diminecjean.github.io/about%20me">About Me</a>
             <a href="#">My Dashboard</a>
             <a href="#">HTML</a>   
             <a href="#">CSS</a> 
