--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         .header {
-            background-color: #166fa8; 
+            background-color: #082A3F; 
             text-align: left; 
             padding: 10px; /*padding adds spacing before and after*/
         }
@@ -13,6 +13,7 @@
         /*The font to be used in a header */
         .header h1{
             color: #ffffff;
+            margin-left: 20px;
             font-family: 'Poppins', sans-serif;
             font-weight: 600;
             font-size: 60px;
@@ -51,6 +52,7 @@
         .topnav a:hover {
             background-color: #ddd;
             color: #082A3F;
+            font-weight: 700;
         }
 
         * {
@@ -84,7 +86,7 @@
         }
 
         .content{
-            padding:15px;
+            padding:20px;
         }
 
         h2{
@@ -113,7 +115,7 @@
 
     <div class="topnav">
             <a href="https://diminecjean.github.io/about%20me">About Me</a>
-            <a href="#">My Dashboard</a>
+            <a href="https://diminecjean.github.io/dashboard">My Dashboard</a>
             <a href="#">HTML</a>   
             <a href="#">CSS</a> 
             <a href="#">JavaScript</a> 
