Update dashboard link

--- a/about me.html
+++ b/about me.html
@@ -112,7 +112,7 @@
             </div>
             <div class="rightcolumn">
                 <a href="https://diminecjean.github.io/home">Home</a>
-                <a href="file:///D:/Documents/USM/HTML/Trial_Dashboard.html">My Dashboard</a>
+                <a href="https://diminecjean.github.io/dashboard">My Dashboard</a>
                 <a href="#">HTML</a>
                 <a href="#">CSS</a>
                 <a href="#">JavaScript</a>
