Add Bootstrap example file

--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
             <a href="https://diminecjean.github.io/dashboard">My Dashboard</a>
             <a href="#">HTML</a>   
             <a href="#">CSS</a> 
-            <a href="#">JavaScript</a> 
+            <a href="https://diminecjean.github.io/bootstrap_trial">Bootstrap</a> 
     </div>
 
     <div class="row">
