--- a/bootstrap_trial.html
+++ b/bootstrap_trial.html
@@ -28,7 +28,7 @@
       <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar w/ text</a>
+            <a class="navbar-brand" href="#">Main Navbar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,8 +45,7 @@
                 </li>
               </ul>
               <span class="navbar-text">
-                Navbar text with an inline element
-              </span>
+                Interesting
             </div>
         </nav>
 
