--- a/home.html
+++ b/home.html
@@ -124,9 +124,9 @@
     <div class="row">
         <div class="leftcolumn">
           <div class="content">
-                <h2>IDK WHAT TO SAY</h2>
+                <h2>Working in Progress</h2>
                 <p>
-                    AYAYAI im a little butterfly <br><br>
+                    Working in Progress <br><br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
